1 small change made

--- a/FuncReq.tex
+++ b/FuncReq.tex
@@ -901,9 +901,11 @@ A lecturer should get a detailed audit report.\\
 \includegraphics[width=1\linewidth]{./Images/UserProfile/ViewUserProfileActivity}
 
 %EPHI
-\textbf{Private Message}
+\textbf{Private Message}\\
 \textbf{Overview}\\
+\begin{center}
 \includegraphics[width=1\linewidth]{./Images/OverviewDiagrams/PrivateMessage.jpg}\\
+\end{center}
 \subsection{Create Private Message}
 \textbf{Description}Create message allows the user that is logged into the system to create a messages such as email message, sms message and profile private message, and select the recipients then write of message contents and can include attachments to the message. 
 \subsubsection{Prioritization:} 
